--- a/wxapp/pages/index/index.wxss
+++ b/wxapp/pages/index/index.wxss
@@ -1,21 +1,18 @@
 /**index.wxss**/
-.userinfo {
+.examp_list{
   display: flex;
-  flex-direction: column;
+  width: 92%;
+  margin: 0 auto;
+}
+.exam_item{
+  display: flex;
+  width: 25%;
+  font-size: 28rpx;
+  color: #333;
+  text-align: center;
+  line-height: 120rpx;
+  height: 120rpx;
   align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+  justify-content: center;
+  border: 1rpx solid #f5f5f5;
 }
