--- a/wxapp/app.wxss
+++ b/wxapp/app.wxss
@@ -1,15 +1,5 @@
 /**app.wxss**/
 .container {
-<<<<<<< HEAD
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
-=======
   width: 100%;
   height: 100%;
 } 
@@ -30,11 +20,18 @@
 .separate-line{
   font-size: 30rpx;
   color: #333;
-  margin-top: 30rpx;
+  margin: 30rpx 0;
 }
 .separate-line .red-star{
   color: rgb(235, 45, 45);
   display: inline-block;
   margin:0 30rpx;
 }
->>>>>>> fanye
+/*列表*/
+.list-item{
+  font-size: 30rpx;
+  height: 88rpx;
+  line-height: 88rpx;
+  text-align: center;
+  border: 1rpx solid #f5f5f5;
+}
