--- a/wxapp/pages/upload_img/upload_img.wxss
+++ b/wxapp/pages/upload_img/upload_img.wxss
@@ -1,4 +1,6 @@
 /* pages/upload_img/upload_img.wxss */
+@import '../component/model/model';
+
 page{
   background: #f5f5f5
 }
@@ -16,7 +18,6 @@ page{
 .upload_img{
   width: 100%;
   height: 410rpx;
-  margin-top: 30rpx;
   display: flex;
   justify-content: center;
   align-items: center;
