--- a/wxapp/pages/demo/upload_img/upload_img.wxml
+++ b/wxapp/pages/demo/upload_img/upload_img.wxml
@@ -8,13 +8,13 @@
     <view class='basic-box' wx:if="{{upload_thumbs != ''}}">
       <view class='show_uploadThumbs position-rela mBottom20'>
         <image class='uploading_photos' src='{{item}}' mode="widthFix"></image>
-        <image class='delet_photo' src='../../images/delete.png' bindtap='splice' data-number='{{index}}'></image>
+        <image class='delet_photo' src='../../../images/delete.png' bindtap='splice' data-number='{{index}}'></image>
       </view>
     </view>
   </block>
   <view class='basic-box' bindtap='upload_img'>
     <view class='upload_img'>
-      <image src='../../images/active_upload.png'></image>
+      <image src='../../../images/active_upload.png'></image>
     </view>
   </view>
   <!--单图上传-->
